--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Perkenalan</title>
+    
   </head>
-  <body></body>
+  <body>
+    <h1> nama fajar danis woro</h1>
+    <p>tinggal di jagakarsa</p>
+  </body>
 </html>
