add data name and address on index.html

--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Perkenalan</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Salam kenal, nama saya prasetio</h1>
+    <p>tinggalnya di sidoarjo</p>
+  </body>
 </html>
