--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Perkenalan</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Nama : Defri Yhuhendri</h1>
+    <p>ALamat : Yogyakarta</p>
+  </body>
 </html>
